2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Don't ignore 'ignoreSelectedValue' here.

2010-06-29  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: ItemContainerStyle is only propagated to
	  generated containers, not to ComboBoxItems the user adds
	  directly.

2010-06-25  Alan McGovern  <amcgovern@novell.com>

	* LayoutInformation.cs: For lack of a better place, store the
	  current LayoutExceptionElement on the deployment using the
	  attached property
	  LayoutInformation::CurrentExceptionElementProperty.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Selector.cs: Updated to SL4 final API.

2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Throw exceptions properly when
	  IsSynchronisedWithCurrentItem is set to true. Copy the value
	  of ICV.CurrentItem to SelectedItem when we're syncing as
	  opposed to copying SelectedItem to ICV.CurrentItem. Fixes
	  more of 232.

2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: If there's a reset event, we need to either
	  select the old item (if it exists) or the CurrentItem of the
	  ICV if we have an ICV now.

2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: If we get a collection reset event, just
	  attempt to reselect the current selection.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs:
	* Selection.cs: Update the implementation of
	  Selector.SelectedItems to pass more of drt 232. Basically we
	  need to keep two copies of the list, one which is publicly
	  accessible by the user and one which is our private 'master'
	  list. We listen for changes to the public one and then
	  mirror them in the master list if they're valid. The public
	  list is always synced to the master one after any
	  modifications to the selection so that if the user does
	  something mad, we can revert that.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Fix drt cs2!
